--- a/style.css
+++ b/style.css
@@ -18,3 +18,23 @@
       display: inline-block;
       outline: 0px solid;
     }
+
+    h1 {
+      margin-bottom: 5px;
+      margin-top: 10px;
+      font-family: sans-serif;
+      font-size: 30px;
+    }
+
+    button {
+      background-color: #4CAF50;
+      border: none;
+      color: white;
+      padding: 10px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin-bottom: 10px;
+      border-radius: 4px;
+    }
